2010-11-05  Chris Marrin  <cmarrin@apple.com>

        Reviewed by Simon Fraser.

        suspendAnimations/resumeAnimations not present in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=49109

        * WebProcess/InjectedBundle/API/c/WKBundleFrame.cpp:
        (WKBundleFrameSuspendAnimations):
        (WKBundleFrameResumeAnimations):
        * WebProcess/InjectedBundle/API/c/WKBundleFramePrivate.h:
        * WebProcess/WebPage/WebFrame.cpp:
        (WebKit::WebFrame::suspendAnimations):
        (WebKit::WebFrame::resumeAnimations):
        * WebProcess/WebPage/WebFrame.h:

2010-11-05  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler.

        WebProcess won't kill itself if UIProcess goes away while WebProcess is spinning
        https://bugs.webkit.org/show_bug.cgi?id=49090
        <rdar://problem/7834575>

        * Platform/CoreIPC/Connection.cpp:
        (CoreIPC::Connection::connectionDidClose):
        Call Client::didCloseOnConnectionWorkQueue.

        * Platform/CoreIPC/Connection.h:
        (CoreIPC::Connection::Client::didCloseOnConnectionWorkQueue):
        Add new client function. Will be called on the connection work queue when the connection is closed.

        * Platform/WorkItem.h:
        (FunctionWorkItem0::FunctionWorkItem0):
        (FunctionWorkItem0::execute):
        (WorkItem::create):
        Add a new WorkItem subclass that will invoke a C function.

        * Platform/WorkQueue.h:
        * Platform/mac/WorkQueueMac.cpp:
        (WorkQueue::scheduleWorkAfterDelay):
        New function which will schedule the given work item to be executed in at least 'delay' seconds.

        * Platform/qt/WorkQueueQt.cpp:
        (WorkQueue::scheduleWorkAfterDelay):
        Add empty stub.
        
        * Platform/win/WorkQueueWin.cpp:
        (WorkQueue::scheduleWorkAfterDelay):
        Ditto.

        * PluginProcess/PluginProcess.h:
        Derive from ChildProcess.

        * Shared/ChildProcess.cpp: Added.