@@ -1,3 +1,15 @@
+2010-11-06  Balazs Kelemen  <kbalazs@webkit.org>
+
+        Reviewed by Andreas Kling.
+
+        [Qt][WK2] WebKitTestRunner is dead
+        https://bugs.webkit.org/show_bug.cgi?id=49129
+
+        * Platform/qt/SharedMemoryQt.cpp:
+        (WebKit::SharedMemory::~SharedMemory):
+        Avoid double deletion when deleteLater has
+        already been called.
+
 2010-11-05  Chris Marrin  <cmarrin@apple.com>
 
         Reviewed by Simon Fraser.
